Release 0.1-1:
  * Rearrange internals.
  * Add vignette.
  * Use pbdZMQ 0.2-1.

Release 0.1-0:
  * Added s2c() and c2s().
  * Added lsc(), rmc(), and evalc().
  * Imported functionality from pbdCS.