@@ -3,8 +3,8 @@
 export(c2s)
 export(client)
 export(evalc)
+export(exit)
 export(lsc)
-export(remoter_exit)
 export(rmc)
 export(s2c)
 export(server)
